--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "babel-polyfill": "^6.26.0",
+    "vue": "^2.5.2",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
