--- a/my-vue-app/package.json
+++ b/my-vue-app/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "jquery": "^3.6.4",
     "vue": "^2.5.2",
-    "vuex": "^4.1.0"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
